<resources>
    <string name="app_name">PersuasionApp</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="hint_standard">Please enter your answer here</string>
    <string name="profile">Profile</string>
    <string name="preparedness">Disaster Preparation</string>
    <string name="incidents">Incidents</string>
    <string name="activities">Activities</string>
    <string name="team_activities">Team Activities</string>
    <string name="help">Help</string>
    <string name="site_notice">Imprint</string>
    <string name="code_hint">Personencode eingeben</string>
    <string name="slide_1_title">Vielen Dank,</string>
    <string name="slide_1_heading">dass du bei unserer Studie mitmachst!</string>
    <string name="slide_1_description">Hier hast du die Möglichkeit deinen individuellen Personencode einzugeben:</string>
    <string name="slide_2_title">Hier eine kurze \n Anleitung:</string>
    <string name="slide_2_description">Im Rahmen des SMARTer City - Projekts haben sich die Technische Universität Darmstadt und das Fraunhofer IGD dafür entschieden, eine digitale Plattform aufzubauen, um die direkte Umgebung von städtischen Bewohnern und Städtern sicherer und angenehmer zu gestalten.
    Einwohner von ganz Deutschland können in der SMARTer City - App angeben, wo Missstände im Straßenverkehr und sonstige Probleme im Stadtalltag und auf öffentlichen Plätzen auftauchen.</string>
    <string name="slide_2_description_2">Insgesamt ist das Ziel unserer App eine umfangreiche Datenbank mithilfe offener Daten der Stadt zu kreieren, um Probleme und Missstände schneller erkennen und darauf reagieren zu können.</string>
    <string name="slide_3_title">Anleitung zum \n Menü:</string>
    <string name="slide_3_description">Die wichtigsten Funktionen der App kurz erklärt:</string>
    <string name="slide_3_description_two">Im Reiter Ereignisse kannst du Meldungen über Probleme und Auffälligkeiten in deiner Umgebung machen. Dazu hast du die Möglichkeit deine GPS-Daten durchzugeben, einen kurzen Text anzugeben oder/und ein Foto hochzuladen. Falls keine konkreten Ereignisse in der Umgebung auftreten, kannst du dir auch erstmal die Vorschläge anschauen, die am häufigsten in anderen Städten gemeldet wurden.</string>
    <string name="slide_2_name_hint">Namen eingeben</string>
    <string name="slide_2_city_hint">Wohnort eingeben</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_cooperation"><u>In Kooperation mit:</u></string>
    <string name="profile_header">VP-Name</string>
    <string name="profile_subheader">VP-Stadt</string>
    <string name="profile_button">+ Mach mehr Punkte</string>
    <string name="profile_points_init">0</string>
    <string name="profile_points_label">Punkte</string>
    <string name="profile_incidents_before">Du hast bereits </string>
    <string name="profile_incidents_after">Meldungen gemacht!</string>
    <string name="crone_hint">Ab 1500 Punkten bekommst du eine Krone!</string>
    <string name="preparedness_checklist_question_01">Inwiefern macht Ihre Krisenvorbereitung Sie zu einer verlässlichen Person für Ihre Familie und Ihre Freunde?</string>
    <string name="preparedness_checklist_done_header">Done</string>
    <string name="preparedness_checklist_todo_header">To do</string>
    <string name="preparedness_checklist_btn_send">Send Answer</string>
    <string-array name="preparedness_checklist_item_names">
        <item>Buy Fire Extinguisher</item>
        <item>Buy Flashlight</item>
        <item>Buy Solar-Charged Batteryr</item>
    </string-array>
    <string name="incidents_description">Hier einige Vorschläge, was du melden könntest:</string>
    <string name="incidents_location">Aktuellen Standort senden!</string>
    <string name="incidents_water">👁 Abwasser und Wasser</string>
    <string name="incidents_tree">👁 Bäume</string>
    <string name="incidents_electronic">👁 Elektronik</string>
    <string name="incidents_vehicles">👁 Fahrzeuge</string>
    <string name="incidents_paths">👁 Geh- und Radwege</string>
    <string name="incidents_buildings">👁 Gebäude</string>
    <string name="incidents_devices">👁 Geräte</string>
    <string name="incidents_health">👁 Gesundheitsgefährdung</string>
    <string name="incidents_noise">👁 Lärm</string>
    <string name="incidents_air">👁 Luftqualität</string>
    <string name="incidents_garbage">👁 Müll</string>
    <string name="incidents_parking">👁 Parken</string>
    <string name="incidents_smoke">👁 Rauch</string>
    <string name="incidents_wc">👁 Sanitäre Anlagen</string>
    <string name="incidents_streets">👁 Straßen</string>
    <string name="incidents_animals">👁 Tiere</string>
    <string name="incidents_polution">👁 Verschmutzung</string>
    <string name="incidents_privacy">👁 Datenschutz</string>
    <string name="incidents_security">👁 Sicherheit</string>
    <string name="incidents_other">👁 Sonstiges</string>
    <string name="incidents_header">Neue Ereignisse in</string>
    <string name="incidents_subheader">deiner Umgebung</string>
    <string name="water_heading">Abwasser und Wasser</string>
    <string name="trees_heading">Bäume</string>
    <string name="security_heading">Sicherheit</string>
    <string name="privacy_heading">Datenschutz</string>
    <string name="electronic_heading">Elektronik?</string>
    <string name="vehicles_heading">Fahrzeuge</string>
    <string name="buildings_heading">Gebäude</string>
    <string name="path_heading">Geh- und Radwege</string>
    <string name="devices_heading">Geräte</string>
    <string name="health_heading">Gesundheitsgefährdung</string>
    <string name="noise_heading">Lärm</string>
    <string name="air_heading">Luft</string>
    <string name="garbage_heading">Müll</string>
    <string name="parking_heading">Parken</string>
    <string name="smoke_heading">Rauch</string>
    <string name="wc_heading">Sanitäre Anlagen</string>
    <string name="streets_heading">Straßen</string>
    <string name="animals_heading">Tiere</string>
    <string name="pollution_heading">Verschmutzung</string>
    <string name="other_heading">Sonstiges</string>
    <string name="incididents_submit_heading">Meldung abschicken</string>
    <string name="incididents_submit_description_location">Du hast hier die Möglichkeit deinen Standort zu senden.</string>
    <string name="incididents_submit_description_situation">Du hast hier die Möglichkeit die Situation zu beschreiben!</string>
    <string name="incidients_submit_button">Abschicken</string>
    <string name="incidents_submit_connectivity_toast">Sie benötigen eine aktive Internetverbindung, um die Daten abzusenden</string>
    <string name="incidents_gallery_button">Gallery</string>
    <string name="incidents_camera_button">Kamera</string>
    <string name="incidents_show_all_button">Alle Aktivitäten anzeigen</string>
    <string name="incidents_hide_all_button">Alle Aktivitäten ausblenden</string>
    <string name="incidents_image_preview">Bildervorschau</string>
    <string name="reports_no_incidents_header">Gerade liegt keine aktuelle Meldung vor</string>
    <string name="reports_no_incidents_subheader">Du kannst uns trotzdem helfen bei der Meldung von generellen Problemen in deiner Umgebung!</string>
    <string name="reports_no_incidents_suggestions">Hier kannst du dir Vorschläge anschauen was du melden könntest!</string>
    <string name="thank_you_header">Vielen Dank</string>
    <string name="thank_you_subheader">für dein Mitwirken!</string>
    <string name="thank_you_description">Durch deine Mithilfe können Anomalien früher erkannt und Schwierigkeiten behoben werden!</string>
    <string name="thank_you_points">Du hast zusätzliche 320 Punkte verdient! Weiter so!</string>
    <string name="thank_you_points_team">Auch dein Team hat 300 Punkte mehr bekommen!</string>
    <string name="thank_you_points_team_before">Dein Bezirk (WB_01) hat bereits </string>
    <string name="thank_you_points_team_after">Punkte gemacht! Deine Teammates sind fleißig am melden! Weiter so!</string>
    <string name="thank_you_close_button">Schließen</string>
    <string name="heading_incident_thankyou">Vielen Dank</string>
    <string name="activities_header">Neue Aktivitäten in</string>
    <string name="activities_subheader">deiner Umgebung</string>
    <string name="help_heading">Fragen zur App?</string>
    <string name="help_subheading">Wir helfen dir weiter!</string>
    <string name="help_header_1">Was ist der Zweck dieser App?</string>
    <string name="help_header_2">Wie funktioniert die App?</string>
    <string name="help_header_3">Was passiert mit meinen Nutzerdaten?</string>
    <string name="help_header_4">Kann ich die Studie abbrechen?</string>
    <string name="help_button_1">⦿ Was ist der Zweck dieser App?</string>
    <string name="help_button_2">⦿ Wie funktioniert die App?</string>
    <string name="help_button_3">⦿ Was passiert mit meinen Nutzerdaten?</string>
    <string name="help_button_4">⦿ Kann ich die Studie abbrechen?</string>
    <string name="help_description_2">Derzeit konzentriert sich der Prototyp auf Darmstadt und weitere größere Städte im Umkreis von 200 km. Die Nutzer werden aufgefordert Problemen nachzugehen, um sicherheitsrelevante Probleme schneller und effizienter zu beheben. </string>
    <string name="help_description_3">Alle personenbezogenen Daten werden pseudonymisiert und auf unseren Servern gespeichert. Deine Eingaben und die Zustimmung zur Analyse deiner Daten (insbesondere zur Erhebung, Speicherung und Veröffentlichung) sind natürlich freiwillig.</string>
    <string name="help_contact_3">Falls du weitere Fragen hast, kannst du dich gerne an folgende Personen wenden:
    </string>
    <string name="contact_1">marion.stahl@stud.tu-darmstadt.de</string>
    <string name="contact_2">nina.gerber@tu-darmstadt.de</string>
    <string name="help_description_4">Du kannst die Studie jederzeit abbrechen. Dazu kannst du den folgenden Link verwenden.</string>
    <string name="help_title_1">Zweck der App</string>
    <string name="help_title_2">Funktionsweise</string>
    <string name="help_title_3">Nutzerdaten</string>
    <string name="help_title_4">Studie abbrechen</string>
    <string name="side_notice_heading">Herausgeber</string>
    <string name="side_notice_institutions">Technische Universität Darmstadt und Fraunhofer IGD</string>
    <string name="side_notice_tu_heading">Technische Universität Darmstadt</string>
    <string name="side_notice_tu_street">Karolinenplatz 5</string>
    <string name="side_notice_tu_city">64289 Darmstadt</string>
    <string name="side_notice_tu_mail">experi@psychologie.tu-darmstadt.de</string>
    <string name="side_notice_tu_phone">+49 (0) 6151 - 16 24080</string>
    <string name="side_notice_igd_heading">Entwickelt in Kooperation mit Fraunhofer-Institut für Graphische Datenverarbeitung (IGD)</string>
    <string name="side_notice_igd_street">Fraunhoferstraße 5</string>
    <string name="side_notice_igd_city">64283 Darmstadt</string>
    <string name="side_notice_igd_mail">info@igd.fraunhofer.de</string>
    <string name="side_notice_igd_phone">+49 (0) 6151 - 155 - 0</string>
    <string name="heading_incident_water">Wasserschäden</string>
    <string name="heading_incident_submit">Meldung abschicken</string>
    <string name="suggestion_heading">Was genau ist passiert?</string>
    <string name="report_sent_success_toast">Meldung verschickt. Danke!</string>
    <string name="report_sent_error_toast">Die Meldung konnte im Moment nicht verschickt werden. Bitte versuchen sie es später noch einmal.</string>
    <string name="exceeded_max_upload_size">Die maximal zulässige Upload-Größe von 10 MB wurde überschritten.</string>
    <string name="report_prepare_toast">Meldung wird verschickt...</string>
    <string name="user_id_not_set_toast">Gebe bitte deinen Personencode ein</string>
</resources>