<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:visible="false" />
        <item
            android:id="@+id/nav_incidents"
            android:title="@string/incidents" />
        <item
           android:id="@+id/nav_activities"
           android:title="@string/activities" />
        <item
            android:id="@+id/nav_team_activities"
            android:title="@string/team_activities"
            android:visible="false" />
        <item
           android:id="@+id/nav_help"
           android:title="@string/help" />
       <item
           android:id="@+id/nav_site_notice"
           android:title="@string/site_notice" />
   </group>
</menu>