<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/baseline_settings_24"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/help_icon"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/side_notice_heading"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_below="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/help_icon"
            android:layout_toEndOf="@+id/help_icon"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:text="@string/side_notice_institutions"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/main_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/side_notice_tu_heading"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:text="@string/side_notice_tu_street"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:text="@string/side_notice_tu_city"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:text="@string/side_notice_tu_mail"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:text="@string/side_notice_tu_phone"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:text="@string/side_notice_igd_heading"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/side_notice_igd_street"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/side_notice_igd_city"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/side_notice_igd_mail"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/side_notice_igd_phone"/>

</LinearLayout>