<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/exclamation_thick"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/help_icon"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/incidents_header"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/help_icon"
            android:text="@string/incidents_subheader"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/main_blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/incidents_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/incidents_button_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidents_water"
        android:textColor="@color/main_blue"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/incidents_button_trees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidents_tree"
        android:textColor="@color/main_blue"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/incidents_button_electronic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidents_electronic"
        android:textColor="@color/main_blue"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/incidents_button_vehicles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidents_vehicles"
        android:textColor="@color/main_blue"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/incidents_button_buildings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidents_buildings"
        android:textColor="@color/main_blue"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/incidents_button_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidents_devices"
        android:textColor="@color/main_blue"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/incidents_button_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidents_health"
        android:textColor="@color/main_blue"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>


</LinearLayout>
