<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_1_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_1_heading"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:textSize="18sp"/>

        <View
            android:layout_width="250dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/slide_1_description"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="150dp"
            android:layout_marginStart="60dp"
            android:layout_height="wrap_content"/>
</LinearLayout>
